[gd_scene load_steps=6 format=3 uid="uid://bh1k3vyisk738"]

[ext_resource type="Script" path="res://Scripts/Components/Gun components/weapon.gd" id="1_gd6oa"]
[ext_resource type="Texture2D" uid="uid://d2id4bgvghfo0" path="res://Assets/Sprites/Guns/Gun1.png" id="2_10y0q"]

[sub_resource type="Animation" id="Animation_tco55"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_c1ie0"]
resource_name = "Shoot"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.151844, -0.453786, -0.151844, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3ia5c"]
_data = {
"RESET": SubResource("Animation_tco55"),
"Shoot": SubResource("Animation_c1ie0")
}

[node name="GunHandle" type="Node2D"]

[node name="Gun" type="Node2D" parent="."]
position = Vector2(-7, -5)
script = ExtResource("1_gd6oa")

[node name="Sprite2D" type="Sprite2D" parent="Gun"]
texture_filter = 1
position = Vector2(7, 5)
texture = ExtResource("2_10y0q")
offset = Vector2(6, -2.5)

[node name="ShootAnimation" type="AnimationPlayer" parent="Gun/Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_3ia5c")
}

[node name="ShootPoint" type="Node2D" parent="Gun"]
position = Vector2(22, -1)

[node name="RotateRib" type="Node2D" parent="Gun"]
position = Vector2(7, -1)
